k3s/sol/components/fmd/fmd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmd
  namespace: apps
  annotations:
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fmd
  template:
    metadata:
      labels:
        app: fmd
    spec:
      securityContext:
        fsGroup: $MY_UID
      containers:
        - name: fmd
          image: registry.gitlab.com/fmd-foss/fmd-server:0.15.0
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: fmd-data
              mountPath: /var/lib/fmd-server/db/
      volumes:
        - name: fmd-data
          persistentVolumeClaim:
            claimName: fmd-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fmd
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: fmd
  ports:
    - port: 8080
      targetPort: 8080
